--- a/app/src/main/res/layout/activity_quiz_resultados.xml
+++ b/app/src/main/res/layout/activity_quiz_resultados.xml
@@ -1,10 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".QuizResultados">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/felicitacion" />
+
+    <TextView
+        android:id="@+id/txtCompletado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:text="Felicidades has completado el Quiz"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:textSize="16sp"/>
+    
+    <LinearLayout
+        android:layout_below="@+id/txtCompletado"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerHorizontal="true"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/respuestaCorrecta"
+            android:text="Respuesta Correcta: 0"
+            android:textStyle="bold"
+            android:textColor="#00C853"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/respuestaIncorrecta"
+            android:text="Respuestas Incorrectas: 0"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
+            android:textColor="#DD2C00"
+            />
+    </LinearLayout>
+    
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnVolverjugar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Volver a jugar"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/round_back_green20"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"/>
+
+</RelativeLayout>
