--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,19 @@
         android:adjustViewBounds="true"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
-        android:src="@drawable/icono"/>
+        android:src="@drawable/icono"
+        android:transitionName="quizIconTransition"/>
+    
+    <CheckBox
+        android:id="@+id/musicaCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="activar/desactivar musica"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginTop="1dp"
+        android:padding="10dp"
+        />
 
     <TextView
         android:id="@+id/elegirTema"
@@ -27,7 +39,8 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="20dp"
         android:textColor="@color/white"
-        android:text="Elegir Tema"/>
+        android:text="Elegir Tema"
+        />
 
     <LinearLayout
         android:id="@+id/layout1"
@@ -173,6 +186,7 @@
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:textSize="16sp"
-        android:background="@drawable/round_back_green20"/>
+        android:background="@drawable/round_back_green20"
+        android:stateListAnimator="@android:animator/fade_in"/>
 
 </RelativeLayout>
