--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/background"
     tools:context=".MainActivity">
@@ -16,6 +17,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
         android:src="@drawable/icono"/>
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/playBtnSesion"
