--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -34,7 +34,7 @@
         android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/settingsButton"
+        android:id="@+id/sesionLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/playBtnSesion"
@@ -42,10 +42,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/round_back_green20"
-        android:text="CONFIGURACION"
+        android:text="Iniciar Sesion"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:textSize="20sp"/>
-
 
 </RelativeLayout>
