--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -9,10 +9,13 @@
     android:background="#0D1F6BB8"
     tools:context=".QuizActivity">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="#1F6BB8">
+
+
         
         <ImageView
             android:id="@+id/backBtn"
@@ -145,4 +148,15 @@
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:layout_marginEnd="20dp"/>
+
+    <CheckBox
+        android:id="@+id/musicaCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="activar/desactivar musica"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        />
 </LinearLayout>
