--- a/app/src/main/res/layout/activity_quiz_resultados.xml
+++ b/app/src/main/res/layout/activity_quiz_resultados.xml
@@ -57,6 +57,16 @@
             android:textColor="#DD2C00"
             />
 
+        <TextView
+            android:id="@+id/textPuntajeFinal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Puntaje Final: 0%"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_marginBottom="24dp"/>
+
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
