--- a/app/src/main/res/drawable/round_back_green10.xml
+++ b/app/src/main/res/drawable/round_back_green10.xml
@@ -2,9 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFDDDDDD"/>
+    <solid android:color="#00C853"/>
     <corners android:radius="10dp"/>
-    <stroke android:width="3dp"
-        android:color="#FF6200EE"/>
 
 </shape>
