--- a/app/src/main/res/layout/activity_quiz_resultados.xml
+++ b/app/src/main/res/layout/activity_quiz_resultados.xml
@@ -81,7 +81,7 @@
         android:text="Volver a jugar"
         android:textColor="#FFFFFF" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSalir"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,8 +89,9 @@
         android:layout_marginTop="54dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
+        android:textColor="#FFFFFF"
         android:text="Salir"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:background="@drawable/round_back_green20"/>
 
