--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -50,10 +50,23 @@
         android:textColorHint="@color/white"
         android:textStyle="bold"/>
 
+    <RadioButton
+        android:id="@+id/Rdcontraseña"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Mostrar Contraseña"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="15sp"/>
+
     <Button
         android:id="@+id/btnRegistrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"
         android:text="Registrarse"
         android:onClick="registrarUsuario"
         android:textStyle="bold"
@@ -63,10 +76,13 @@
         android:id="@+id/btnRegresar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:text="regresar"
-        android:textStyle="bold"
-        android:textSize="15sp"/>
-
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
